--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: mate-calc
 Section: math
 Priority: optional
-Maintainer: MATE Packaging Team <mate-dev@ml.mate-desktop.org>
+Maintainer: MATE Packaging Team <pkg-mate-team@lists.alioth.debian.org>
 Uploaders: Mike Gabriel <sunweaver@debian.org>,
-           John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>,
-           Stefano Karapetsas <stefano@karapetsas.com>,
+           Martin Wimpress <code@flexion.org>,
            Vangelis Mouhtsis <vangelis@gnugr.org>,
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1.1),
@@ -12,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                libglib2.0-dev,
                libgtk-3-dev,
                libxml2-dev,
-               mate-common (>= 1.17),
+               mate-common (>= 1.16),
                yelp-tools,
 Standards-Version: 3.9.8
 Homepage: http://www.mate-desktop.org/
@@ -21,7 +20,7 @@ Vcs-Git: https://anonscm.debian.org/git/pkg-mate/mate-calc.git
 
 Package: mate-calc
 Architecture: any
-Depends: mate-calc-common (= ${source:Version}),
+Depends: mate-calc-common (>= ${source:Version}), mate-calc-common (<< ${source:Version}.1~),
          ${misc:Depends},
          ${shlibs:Depends},
 Description: MATE desktop calculator
@@ -32,6 +31,7 @@ Description: MATE desktop calculator
 Package: mate-calc-common
 Architecture: all
 Depends: ${misc:Depends},
+Breaks: mate-calc (<< 1.7.0),
 Replaces: mate-calc (<< 1.7.0),
 Description: MATE desktop calculator (common files)
  mate-calc is a powerful graphical calculator with financial, logical and
