debian/control: Fix fullname of the Debian MATE Package Team in Maintainer: field.!

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: mate-calc
 Section: math
 Priority: optional
-Maintainer: MATE Packaging Team <pkg-mate-team@lists.alioth.debian.org>
+Maintainer: Debian MATE Packaging Team <pkg-mate-team@lists.alioth.debian.org>
 Uploaders: Mike Gabriel <sunweaver@debian.org>,
            Martin Wimpress <code@flexion.org>,
            Vangelis Mouhtsis <vangelis@gnugr.org>,
