--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Debian+Ubuntu Debian MATE Packaging Team <debian-mate@lists.debian.o
 Uploaders: Mike Gabriel <sunweaver@debian.org>,
            Martin Wimpress <code@flexion.org>,
            Vangelis Mouhtsis <vangelis@gnugr.org>,
+           MATE Packaging Team <pkg-mate-team@lists.alioth.debian.org>,
 Build-Depends: debhelper (>= 10.3~),
                dpkg-dev (>= 1.16.1.1),
                libatk1.0-dev,
