--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: debhelper (>= 11~),
                yelp-tools,
 Standards-Version: 4.1.3
 Homepage: http://www.mate-desktop.org/
-Vcs-Browser: https://anonscm.debian.org/git/pkg-mate/mate-calc.git
-Vcs-Git: https://anonscm.debian.org/git/pkg-mate/mate-calc.git
+Vcs-Browser: https://salsa.debian.org/debian-mate-team/mate-calc
+Vcs-Git: https://salsa.debian.org/debian-mate-team/mate-calc.git
 
 Package: mate-calc
 Architecture: any
