--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper-compat (=12),
                mate-common (>= 1.18),
                yelp-tools,
 Standards-Version: 4.4.1
+Rules-Requires-Root: no
 Homepage: http://www.mate-desktop.org/
 Vcs-Browser: https://salsa.debian.org/debian-mate-team/mate-calc
 Vcs-Git: https://salsa.debian.org/debian-mate-team/mate-calc.git
