--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper-compat (=12),
                libglib2.0-dev,
                libgtk-3-dev,
                libxml2-dev,
+               libxml2-utils,
                mate-common (>= 1.18),
                yelp-tools,
 Standards-Version: 4.5.0
