--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: debhelper-compat (=12),
                libgtk-3-dev,
                libxml2-dev,
                libxml2-utils,
-               mate-common (>= 1.24),
+               mate-common (>= 1.24.0-1~),
                yelp-tools,
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
