--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper-compat (= 13),
                libatk1.0-dev,
                libglib2.0-dev,
                libgtk-3-dev,
+               libmpfr-dev,
                libxml2-dev,
                libxml2-utils,
                mate-common (>= 1.24.0-1~),
